# CryptBackdoor

./: CMakeLists.txt  CryptBackdoor.sln  README.md  toolchain-i686-w64-mingw32.cmake
CryptBackdoor/: CMakeLists.txt  CryptBackdoor.vcxproj  CryptBackdoor.vcxproj.filters  crypt_backdoor.cpp
CryptBackdoor/disasm-lib/: disasm.c  disasm.h
CryptBackdoor/mhook-lib/: mhook.cpp
CryptTest/: CMakeLists.txt  CryptTest.vcxproj  CryptTest.vcxproj.filters  main.c
HookLoader/: CMakeLists.txt  HookLoader.vcxproj  main.cpp
